# cgs

./: .travis.yml  CMakeLists.txt  README.md
include/: cgs.hpp
include/cgs/: algorithm.hpp  assert.hpp  macro.hpp  math.hpp  meta.hpp  optimize.hpp  unowned_ptr.hpp
include/cgs/meta/: constexpr.hpp  ignore.hpp  invocable.hpp
include/cgs/simd/: vec4.hpp
test/: algorithm.cpp  assert.cpp  assert_abort.cpp  assert_debug.cpp  assert_release.cpp  assert_throw.cpp  assert_undefined.cpp  math.cpp  meta.cpp  unowned_ptr.cpp
